--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <script src="http://apps.bdimg.com/libs/jquery/1.7.2/jquery.min.js"></script>
 <style>
     #ul1 {
-        position: relative;
+        /* position: relative;
         top: 100px;
-        left: 200px;
+        left: 200px; */
         background-color: red;
     }
     #li1 {
@@ -22,6 +22,14 @@
     <ul id="ul1">
         <li id="li1">111</li>
         <li>222</li>
+        <li>222</li>
+        <li>222</li>
+        <li>222</li>
+        <li>222</li>
+        <li>222</li>
+        <li>333</li>
+        <li>333</li>
+        <li>333</li>
         <li>333</li>
         <li>444</li>
     </ul>
